# shieldpoint-contract

./: .env.example  .gitignore  Cargo.toml  README.md
contracts/auth/: Cargo.toml
contracts/auth/src/: lib.rs
contracts/auth/tests/: test.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs
contracts/registry/tests/: test.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
contracts/verifier/tests/: test.rs
crypto/: Cargo.toml
crypto/src/: bn254.rs  lib.rs  poseidon.rs
scripts/: deploy.sh  upgrade.sh
tests/: Cargo.toml  integration.rs
tests/src/: lib.rs
